--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,33 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-size: 12px;
+    width: 100vw;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.wrapper {
+    width: calc(100% - (350px * 2));
+    margin: 0 auto;
+}
+.wrapper::before {
+    position: absolute;
+    content: '';
+    height: 1px;
+    width: 100%;
+    background-color: #f1f3f4;
+    top: 50px;
+    left: 0;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+}
+
+li {
+    list-style: none;
 }
