--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,8 @@
 @import './assets//style/header.css';
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10vh;
+}
