--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 body {
     font-size: 12px;
     width: 100vw;
+    font-family: 'Lato', sans-serif;
 }
 
 .wrapper {
@@ -30,4 +31,13 @@ a {
 
 li {
     list-style: none;
+}
+
+h2 {
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 24px;
+}
+
+h4 {
+    margin-bottom: 10px;
 }
