--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
 }
 
 .wrapper {
-    width: calc(100% - (350px * 2));
+    width: calc(100vw - (350px * 2));
     margin: 0 auto;
 }
 .wrapper::before {
@@ -40,4 +40,25 @@ h2 {
 
 h4 {
     margin-bottom: 10px;
+}
+
+@media screen and (max-width: 1500px) {
+    .wrapper {
+        width: calc(100vw - (180px * 2));
+        margin: 0 auto;
+    }
+}
+
+@media screen and (max-width: 1350px) {
+    .wrapper {
+        width: calc(100vw - (90px * 2));
+        margin: 0 auto;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    .wrapper {
+        width: 100vw;
+        padding: 2vw;
+    }
 }
