--- a/src/assets/style/header.css
+++ b/src/assets/style/header.css
@@ -10,10 +10,6 @@ nav {
     position: relative;
 }
 
-img {
-    width: 80px;
-    height: 100%;
-}
 ul {
     display: flex;
     flex-direction: row;
@@ -25,7 +21,7 @@ ul {
     display: flex;
     gap: 10px;
 }
-.buttons li {
+.buttons a {
     cursor: pointer;
     height: 30px;
     width: 150px;
@@ -34,14 +30,32 @@ ul {
     justify-content: center;
     align-items: center;
 }
-li:last-child {
+a:last-child {
     background-color: #0ab1ba;
 }
 
-.buttons li:first-child a {
+.buttons a:first-child li {
     color: #0ab1ba;
 }
-.buttons li:last-child a {
+.buttons a:last-child li {
     background-color: #0ab1ba;
     color: white;
+}
+
+@media screen and (max-width: 500px) {
+    .logo {
+        position: relative;
+        width: 100%;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .logo img {
+        width: 30vw;
+        height: 40px;
+    }
+    .buttons {
+        display: none;
+    }
 }
