--- a/src/assets/style/home.css
+++ b/src/assets/style/home.css
@@ -5,20 +5,85 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
-    margin-top: 100px;
+    margin: 100px auto;
+}
+.offers a {
+    width: 100%;
+    width: 200px;
+    height: 350px;
+    box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.64);
 }
 
 .offer {
-    width: 200px;
-    height: 350px;
-    background-color: green;
+    width: 100%;
+    height: 100%;
     cursor: pointer;
-    box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.64);
 }
 .offer:hover {
     transform: scale3d(1.1, 1.1, 1);
 }
 .offer img {
     width: 100%;
+    height: 100%;
     object-fit: cover;
+}
+
+@media screen and (max-width: 1400px) {
+    .offers {
+        max-width: 80vw;
+        flex-wrap: wrap;
+        column-gap: 10px;
+        row-gap: 50px;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    .offers {
+        max-width: 80vw;
+        column-gap: 30px;
+        row-gap: 50px;
+    }
+}
+
+@media screen and (max-width: 850px) {
+    .offers {
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        align-items: stretch;
+        grid-row-gap: 80px;
+        margin: 40px auto;
+    }
+    .offers a {
+        width: 100%;
+        height: 350px;
+        margin: 0 auto;
+    }
+
+    .offers a img {
+        margin-bottom: 10px;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .offers {
+        grid-template-columns: repeat(1, 1fr);
+        grid-row-gap: 80px;
+    }
+    .offers a {
+        box-shadow: none;
+    }
+    .offers .offer {
+        width: 70vw;
+        height: 350px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .offer img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
 }
