--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,12 @@
 @import './assets//style/header.css';
 @import './assets/style/home.css';
 @import './assets/style/offer.css';
+@import './assets/style/signup.css';
 
 footer {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 10vh;
-}
-footer a:last-child {
-    background-color: white;
-    color: black;
-    font-weight: bold;
-    text-decoration: none;
-    font-size: 1.2em;
+    height: 2vh;
 }
