--- a/src/assets/style/loader.css
+++ b/src/assets/style/loader.css
@@ -1,61 +1,55 @@
-.loader {
-    width: 100vw;
-    height: 100vh;
-    background-color: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.lds-ellipsis {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
 }
-
-.loader .letter {
-    color: #484848;
-    font-size: 80px;
-    letter-spacing: 15px;
-    margin-bottom: 150px;
-    animation: flash 1.2s linear infinite;
+.lds-ellipsis div {
+    position: absolute;
+    top: 33px;
+    width: 13px;
+    height: 13px;
+    border-radius: 50%;
+    background: #fff;
+    animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
-
-@keyframes flash {
+.lds-ellipsis div:nth-child(1) {
+    left: 8px;
+    animation: lds-ellipsis1 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(2) {
+    left: 8px;
+    animation: lds-ellipsis2 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(3) {
+    left: 32px;
+    animation: lds-ellipsis2 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(4) {
+    left: 56px;
+    animation: lds-ellipsis3 0.6s infinite;
+}
+@keyframes lds-ellipsis1 {
     0% {
-        color: #fff900;
-        text-shadow: 0 0 7px #fff900;
-    }
-    90% {
-        color: #484848;
-        text-shadow: none;
+        transform: scale(0);
     }
     100% {
-        color: #fff900;
-        text-shadow: 0 0 7px #fff900;
+        transform: scale(1);
     }
 }
-.loader .letter:nth-child(1) {
-    animation-delay: 0.1s;
+@keyframes lds-ellipsis3 {
+    0% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(0);
+    }
 }
-.loader .letter:nth-child(2) {
-    animation-delay: 0.2s;
-}
-.loader .letter:nth-child(3) {
-    animation-delay: 0.3s;
-}
-.loader .letter:nth-child(4) {
-    animation-delay: 0.4s;
-}
-.loader .letter:nth-child(5) {
-    animation-delay: 0.5s;
-}
-.loader .letter:nth-child(6) {
-    animation-delay: 0.6s;
-}
-.loader .letter:nth-child(7) {
-    animation-delay: 0.7s;
-}
-.loader .letter:nth-child(8) {
-    animation-delay: 0.8s;
-}
-.loader .letter:nth-child(9) {
-    animation-delay: 0.9s;
-}
-.loader .letter:nth-child(10) {
-    animation-delay: 1s;
+@keyframes lds-ellipsis2 {
+    0% {
+        transform: translate(0, 0);
+    }
+    100% {
+        transform: translate(24px, 0);
+    }
 }
