--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,12 @@
 @import './assets/style/loader.css';
 @import './assets//style/header.css';
-@import './assets/style/home.css';
+@import './assets/style/offers.css';
 @import './assets/style/offer.css';
 @import './assets/style/signup.css';
+@import './assets/style/homepage.css';
 
 footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
     margin-top: 10vh;
     height: 2vh;
 }
