--- a/src/assets/style/offers.css
+++ b/src/assets/style/offers.css
@@ -1,3 +1,19 @@
+.image {
+    width: 80%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 50px auto 40px;
+}
+.image img {
+    object-fit: cover;
+    width: 100%;
+    max-width: 100%;
+    height: 100%;
+    box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.64);
+}
+
 .offers {
     width: 100%;
     display: flex;
@@ -5,7 +21,6 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
-    margin: 100px auto;
 }
 .offers a {
     width: 100%;
