--- a/src/assets/style/signup.css
+++ b/src/assets/style/signup.css
@@ -54,3 +54,32 @@ form input[type='submit'] {
     width: 40%;
     margin-top: 40px;
 }
+
+@media screen and (max-width: 1300px) {
+    form {
+        width: 40vw;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    form {
+        width: 50vw;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    form {
+        width: 65vw;
+    }
+}
+@media screen and (max-width: 600px) {
+    form {
+        width: 70vw;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    form {
+        width: 80vw;
+    }
+}
