--- a/src/assets/style/signup.css
+++ b/src/assets/style/signup.css
@@ -54,6 +54,9 @@ form input[type='submit'] {
     width: 40%;
     margin-top: 40px;
 }
+.signup-error-message {
+    color: red;
+}
 
 @media screen and (max-width: 1300px) {
     form {
