--- a/src/assets/style/offers.css
+++ b/src/assets/style/offers.css
@@ -80,19 +80,11 @@
     align-items: center;
 }
 
-.filter form input,
-.filter form label {
-    flex: 1;
-}
 .filter form input[type='search'] {
     max-width: 150px;
     height: 40px;
 }
-.filter form input[type='chekbox'] {
-    max-width: 150px;
-    height: 40px;
-    background-color: red;
-}
+
 .filter form input[type='text'] {
     max-width: 70px;
     height: 40px;
@@ -102,6 +94,7 @@
     height: 40px;
     background-color: black;
     color: white;
+    border: none;
 }
 
 @media screen and (max-width: 1400px) {
@@ -138,6 +131,37 @@
 
     .offers a img {
         margin-bottom: 10px;
+    }
+    .filter form {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-items: flex-start;
+        justify-content: space-between;
+        gap: 10px;
+        margin: 0 0 20px;
+        width: 20%;
+        font-size: 0.8em;
+    }
+
+    .filter form .inputs {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .filter form input[type='search'] {
+        width: 100%;
+        padding: 10px;
+    }
+
+    .filter form input[type='text'] {
+        max-width: 100%;
+        height: 40px;
+    }
+    .filter form input[type='reset'] {
+        width: 100%;
+        padding: 10px;
+        margin: 0 auto;
     }
 }
 
