--- a/src/assets/style/signup.css
+++ b/src/assets/style/signup.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 3vh auto 6vh;
+    margin: 10vh auto 6vh;
 }
 
 form {
@@ -15,17 +15,20 @@ form {
     align-items: center;
     justify-content: center;
     gap: 20px;
-    width: 30%;
+    width: 40vw;
 }
 .signup h1,
 .login h1 {
-    margin: 40px auto;
+    margin: 5vh auto;
+    text-align: center;
+}
+
+.login form a {
+    text-decoration: underline;
 }
 
 form input,
 form input {
-    width: 65%;
-    height: 40px;
     border: 1px solid #d1d4dd;
 }
 
@@ -33,6 +36,8 @@ form input[type='text'],
 form input[type='email'],
 form input[type='password'],
 form input[type='phone'] {
+    height: 40px;
+    width: 65%;
     font-family: 'lato';
     font-size: 12px;
     padding-left: 18px;
@@ -41,10 +46,14 @@ form .checkbox {
     width: 65%;
     display: flex;
     align-items: center;
+    justify-content: flex-start;
     gap: 20px;
 }
+form .checkbox label {
+    width: calc(100% - 15%);
+}
 form .checkbox input[type='checkbox'] {
-    width: auto;
+    text-align: left;
 }
 
 form input[type='submit'] {
@@ -52,37 +61,42 @@ form input[type='submit'] {
     background-color: black;
     color: white;
     width: 40%;
+    height: 40px;
     margin-top: 40px;
 }
-.signup-error-message {
+form .signup-error-message {
     color: red;
 }
 
-@media screen and (max-width: 1300px) {
-    form {
-        width: 40vw;
-    }
+form .highlight {
+    text-decoration: underline;
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1300px) {
     form {
         width: 50vw;
     }
 }
 
+@media screen and (max-width: 1100px) {
+    form {
+        width: 60vw;
+    }
+}
+
 @media screen and (max-width: 800px) {
     form {
-        width: 65vw;
+        width: 75vw;
     }
 }
 @media screen and (max-width: 600px) {
     form {
-        width: 70vw;
+        width: 90vw;
     }
 }
 
 @media screen and (max-width: 500px) {
     form {
-        width: 80vw;
+        width: 100vw;
     }
 }
