finalisation création de nouveau produit

--- a/src/assets/style/header.css
+++ b/src/assets/style/header.css
@@ -44,7 +44,11 @@ nav ul {
 nav .buttons {
     display: flex;
     align-items: center;
+}
+nav .buttons div {
+    display: flex;
     gap: 10px;
+    margin-right: 10px;
 }
 nav .buttons a {
     cursor: pointer;
