--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 @import './assets//style/header.css';
 @import './assets/style/offers.css';
 @import './assets/style/offer.css';
-@import './assets/style/signup.css';
+@import './assets/style/form.css';
 @import './assets/style/homepage.css';
 @import './assets/style/slider.css';
 @import './assets/style/stores.css';
