--- a/src/assets/style/form.css
+++ b/src/assets/style/form.css
@@ -1,5 +1,6 @@
 .signup,
-.login {
+.login,
+.publish {
     width: 100vw;
     height: 100%;
     display: flex;
@@ -18,7 +19,8 @@ form {
     width: 40vw;
 }
 .signup h1,
-.login h1 {
+.login h1,
+.publish h1 {
     margin: 5vh auto;
     text-align: center;
 }
@@ -32,8 +34,42 @@ form input {
     border: 1px solid #d1d4dd;
 }
 
+form .custom-file-upload {
+    width: 65%;
+    height: 100px;
+    border: 1px solid #d1d4dd;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+form .custom-file-upload label {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 1px solid lightgray;
+    height: 60px;
+    width: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 3em;
+    background-color: black;
+    color: white;
+}
+form input[type='file'] {
+    opacity: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 form input[type='text'],
 form input[type='email'],
+form input[type='Number'],
 form input[type='password'],
 form input[type='phone'] {
     height: 40px;
