--- a/src/assets/style/footer.css
+++ b/src/assets/style/footer.css
@@ -18,7 +18,7 @@ footer .footer-conditions {
     align-items: center;
     justify-content: space-around;
     row-gap: 20px;
-    margin-bottom: 30px;
+    margin: 100px auto 30px;
 }
 footer .footer-conditions .square {
     width: 5px;
