--- a/src/assets/style/form.css
+++ b/src/assets/style/form.css
@@ -36,35 +36,25 @@ form input {
 
 form .custom-file-upload {
     width: 65%;
-    height: 100px;
+    padding: 1.5vh;
     border: 1px solid #d1d4dd;
     cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    position: relative;
+    height: 400px;
+    max-height: 400px;
     position: relative;
 }
-form .custom-file-upload label {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border: 1px solid lightgray;
-    height: 60px;
-    width: 60px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 3em;
-    background-color: black;
-    color: white;
-}
-form input[type='file'] {
-    opacity: 0;
-    top: 0;
-    left: 0;
+form .custom-file-upload img {
+    object-fit: cover;
     width: 100%;
-    height: 100%;
+    height: 400px;
+    position: absolute;
+    top: 0;
+    left: -1px;
 }
 
 form input[type='text'],
