--- a/src/assets/style/offers.css
+++ b/src/assets/style/offers.css
@@ -15,19 +15,16 @@
 }
 
 .offers {
-    margin-top: 40px;
+    margin: 40px auto 200px;
     width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    row-gap: 50px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto;
+    column-gap: 20px;
+    row-gap: 100px;
 }
 .offers a {
     width: 100%;
-    width: 200px;
     height: 350px;
     box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.64);
 }
@@ -37,9 +34,7 @@
     height: 100%;
     cursor: pointer;
 }
-.offer:hover {
-    transform: scale3d(1.1, 1.1, 1);
-}
+
 .offer img {
     width: 100%;
     height: 100%;
@@ -104,30 +99,17 @@
 
 @media screen and (max-width: 1400px) {
     .offers {
-        max-width: 80vw;
-        flex-wrap: wrap;
-        column-gap: 10px;
-        row-gap: 50px;
+        grid-template-columns: repeat(3, 1fr);
     }
 }
 
 @media screen and (max-width: 1000px) {
     .offers {
-        max-width: 80vw;
-        column-gap: 30px;
-        row-gap: 50px;
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
 @media screen and (max-width: 850px) {
-    .offers {
-        width: 100%;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        align-items: stretch;
-        grid-row-gap: 80px;
-        margin: 40px auto;
-    }
     .offers a {
         width: 100%;
         height: 350px;
@@ -172,6 +154,7 @@
 
 @media screen and (max-width: 650px) {
     .offers {
+        align-content: center;
         grid-template-columns: repeat(1, 1fr);
         grid-row-gap: 80px;
     }
@@ -179,8 +162,7 @@
         box-shadow: none;
     }
     .offers .offer {
-        width: 70vw;
-        height: 350px;
+        width: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
