--- a/src/assets/style/offers.css
+++ b/src/assets/style/offers.css
@@ -43,7 +43,7 @@
 
 .filter {
     width: 100%;
-    margin: 20px auto;
+    min-height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
