visuel CardElement ne s'affiche pas

--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,5 @@
 @import './assets/style/stores.css';
 @import './assets/style/brand.css';
 @import './assets/style/footer.css';
+@import './assets/style/basket.css';
+@import './assets/style/payment.css';
