--- a/src/assets/style/slider.css
+++ b/src/assets/style/slider.css
@@ -9,16 +9,17 @@
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
+        width: 100%;
     }
 
     .slider-menu a {
         font-size: 2em;
-        width: 200px;
         margin-bottom: 20px;
     }
     .slider-menu div {
         border-top: 1px solid lightgray;
         padding: 15px 0;
+        width: 100%;
     }
     .slider-menu div:last-child {
         border-bottom: 1px solid lightgray;
