--- a/src/assets/style/basket.css
+++ b/src/assets/style/basket.css
@@ -1,19 +1,29 @@
 .basket {
     width: 100%;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 .basket h1 {
-    margin: 80px auto 0;
+    margin: 80px auto;
     text-align: center;
 }
 .basket a {
     text-decoration: underline;
 }
 
-.basket .shopping-list {
+.basket .shopping {
+    width: 100%;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+}
+
+.basket .left-col {
     width: calc(100% - 260px);
 }
-.basket .shopping-list .product {
+.basket .left-col .product {
     width: 100%;
     height: 220px;
     display: flex;
@@ -21,16 +31,16 @@
     gap: 30px;
 }
 
-.basket .shopping-list .product .left-col {
+.basket .left-col .product .left {
     width: 165px;
     height: 100%;
 }
-.basket .shopping-list .product .left-col img {
+.basket .left-col .product .left img {
     object-fit: contain;
     width: 100%;
 }
 
-.basket .shopping-list .product .right-col {
+.basket .left-col .product .right {
     width: calc(100% - 195px);
     height: 50px;
     display: flex;
@@ -38,7 +48,7 @@
     align-items: center;
     gap: 30px;
 }
-.basket .shopping-list .product .right-col .buttons {
+.basket .left-col .product .right .buttons {
     width: 95px;
     height: 50px;
     background-color: white;
@@ -48,7 +58,7 @@
     align-items: center;
 }
 
-.basket .shopping-list .product .right-col .buttons button {
+.basket .left-col .product .right .buttons button {
     border: none;
     height: 100%;
     width: 100%;
@@ -56,12 +66,8 @@
     color: black;
 }
 
-.basket .shop {
+.basket .right-col {
     width: 260px;
-    position: sticky;
-    top: 58%;
-    left: 100%;
-    transform: translateY(-50%);
 }
 
 .basket .payment-info {
@@ -106,4 +112,34 @@
     background-color: black;
     color: white;
     border: none;
+}
+
+@media screen and (max-width: 1000px) {
+    .basket .shopping {
+        width: 100%;
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: space-between;
+        gap: 50px;
+    }
+    .basket .shopping .right-col {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+    .basket .shopping .left-col {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: 0 auto;
+    }
+    .basket .left-col .product .right {
+        width: calc(100% - 195px);
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 30px;
+    }
 }
